[gd_scene load_steps=4 format=3 uid="uid://dobrqoxliyng0"]

[ext_resource type="Script" path="res://Scripts/SoldTransactionsLog.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Controls/ActionButtonContainer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b6vjvcn46ihmy" path="res://Scenes/Controls/SoldTransactionColumns.tscn" id="3"]

[node name="SoldTransactionsLog" type="Control"]
custom_minimum_size = Vector2(920, 424)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -104.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1047.0
offset_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 16

[node name="BackgroundColor" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.207843, 0.231373, 0.341176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ActionButtonContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer" index="0"]
layout_mode = 0

[node name="HBoxContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="EditButton" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="DeleteButton" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer" index="2"]
layout_mode = 2

[node name="SoldTransactionColumns" parent="MarginContainer/VBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(737, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Transactions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="DeleteClicked" from="MarginContainer/VBoxContainer/ActionButtonContainer" to="." method="_on_ActionButtonContainer_DeleteClicked"]
[connection signal="SelectAll" from="MarginContainer/VBoxContainer/SoldTransactionColumns" to="." method="_on_SoldTransactionColumns_SelectAll"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer"]
[editable path="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/EditButton"]
[editable path="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/DeleteButton"]
