[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SoldTransactionsLog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Controls/ActionButtonContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Controls/SoldTransactionColumns.tscn" type="PackedScene" id=3]

[node name="SoldTransactionsLog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -87.9999
margin_bottom = -176.0
rect_min_size = Vector2( 952, 424 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 952, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 944.0
margin_bottom = 408.0
color = Color( 0.207843, 0.231373, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 944.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButtonContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 933.0
margin_bottom = 72.0

[node name="HBoxContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer" index="0"]
margin_right = 296.0

[node name="AddTransactonButton" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer" index="0"]
margin_right = 136.0
rect_min_size = Vector2( 136, 40 )

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/AddTransactonButton" index="0"]
rect_min_size = Vector2( 136, 40 )

[node name="Button" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/AddTransactonButton/MarginContainer" index="0"]
margin_right = 136.0
rect_min_size = Vector2( 136, 40 )
text = "ADD TRANSACTON"

[node name="CalculateSellButton" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer" index="1"]
margin_left = 152.0
margin_right = 288.0
rect_min_size = Vector2( 136, 40 )

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton" index="0"]
margin_right = 152.0
margin_bottom = 40.0
rect_min_size = Vector2( 136, 40 )

[node name="Button" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton/MarginContainer" index="0"]
margin_right = 171.0
rect_min_size = Vector2( 136, 40 )
text = "ADD SELL TRANSACTION"

[node name="SoldTransactionColumns" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 928.0
margin_bottom = 56.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 928.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trasactions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 928.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="AddTransClicked" from="MarginContainer/VBoxContainer/ActionButtonContainer" to="." method="_on_ActionButtonContainer_AddTransClicked"]
[connection signal="CalcualteSellClicked" from="MarginContainer/VBoxContainer/ActionButtonContainer" to="." method="_on_ActionButtonContainer_CalcualteSellClicked"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/AddTransactonButton"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton"]
